--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inout",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cesar-richard.github.io/inout",
+  "homepage": "https://inout-chi.vercel.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
